--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.0.2",
     "@types/ioredis": "^4.28.5",
-    "@types/react": "17.0.38",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.38",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.8",
     "@types/react-pdf": "^5.0.4",
@@ -71,6 +72,6 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.18",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
